# baxter_app_rpc

./: .rosinstall  README.md  README.rst
baxter_rpc_msgs/: CMakeLists.txt  package.xml
baxter_rpc_msgs/srv/: SolvePositionIkParts.srv
baxter_rpc_server/: CMakeLists.txt  README.rst  package.xml  setup.py
baxter_rpc_server/launch/: rpc.launch  rpc_sim.launch
baxter_rpc_server/script/: rpc_server_script.py  sample_baxter_script.py  samplescript_baxter_rpc.py
baxter_rpc_server/src/baxter_rpc_server/: baxter_rpc_server.py  sample_baxter.py  sample_rpc.py
baxter_rpc_server/test/: rpc.test  test_rpc.py
