<?xml version="1.0"?>
<package>
  <name>baxter_rpc_msgs</name>
  <version>0.0.0</version>
  <description>ROS topic/service/action files are defined in this package for
  Baxter RPC (Remote Procedure Call).
  
  Later on if RPC feature turned out to be found worthwhile, we could consolidate
  files in this package into somewhere upstream under Baxter umbrella. 
  </description>

  <author email="dev@opensource-robotics.tokyo.jp">TORK</author>
  <maintainer email="todotodotodo@keio.jp">Keio University Yamaguchi Lab</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>

  <license>Apache License 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/baxter_rpc_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <!-- <build_depend>baxter_core_msgs</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <!-- <run_depend>baxter_core_msgs</run_depend> -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export />
</package>
